Various visual fixes for mobile, spacing, fonts, etc.

--- a/frontend/styles/core/_base.scss
+++ b/frontend/styles/core/_base.scss
@@ -28,10 +28,11 @@
 }
 
 // Smoothing for web fonts and kerning
-html { 
+html, body { 
   -webkit-font-smoothing: antialiased; 
   -moz-osx-font-smoothing: grayscale; 
   letter-spacing: 0.025em;
+  font-weight: 400;
 }
 
 table {
