--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -35,8 +35,8 @@
   $weight-normal:    400,
   $weight-medium:    500,
   $weight-semibold:  500,
-  $weight-bold:      600,
-  $weight-extrabold: 600
+  $weight-bold:      700,
+  $weight-extrabold: 700,
 );
 
 // Map Bulma’s semantic colours to our custom variables
