--- a/frontend/styles/oa/_utilities.scss
+++ b/frontend/styles/oa/_utilities.scss
@@ -41,7 +41,7 @@
     font-size: 0.5em;
     font-weight: bold;
     line-height: 1;
-    margin-left: -.45em;
+    margin-left: .25em;
     color: currentColor;
     transform: translateY(-0.75em);
   }
